@@ -46,6 +46,7 @@ ErrorNoSocialContributionForSellerCountry=Error, no social contribution type def
 ErrorFailedToSaveFile=Error, failed to save file.
 ErrorOnlyPngJpgSupported=Error, only .png and .jpg image format file are supported.
 ErrorImageFormatNotSupported=Your PHP does not support functions to convert images of this format.
+BackgroundColorByDefault=Default background color
 GoToWikiHelpPage=Read online help (need Internet access)
 GoToHelpPage=Read help 
 RecordSaved=Record saved
