@@ -46,6 +46,7 @@ ErrorNoSocialContributionForSellerCountry=Erreur, aucun type de charges défini 
 ErrorFailedToSaveFile=Erreur, l'enregistrement du fichier a échoué.
 ErrorOnlyPngJpgSupported=Erreur, seuls les formats images .jpg et .png sont supportés.
 ErrorImageFormatNotSupported=Votre PHP ne supporte pas les fonctions de conversion de ce format d'image.
+BackgroundColorByDefault=Couleur de fond
 GoToWikiHelpPage=Consulter l'aide (nécessite un accès internet)
 GoToHelpPage=Consulter l'aide
 RecordSaved=Enregistrement sauvegardé
